--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,16 @@
 Django==1.5.1
+argparse==1.2.1
 dj-database-url==0.2.1
 django-bootstrap-toolkit==2.12.0
+django-social-auth==0.7.23
+flake8==2.0
 gunicorn==0.17.2
+httplib2==0.8
+mccabe==0.2.1
+oauth2==1.5.211
+pep8==1.4.5
+pyflakes==0.7.2
+python-instagram==0.8.0
+python-openid==2.2.5
+simplejson==3.3.0
 wsgiref==0.1.2
