--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ httplib2==0.8
 mccabe==0.2.1
 oauth2==1.5.211
 pep8==1.4.5
+psycopg2==2.5
 pyflakes==0.7.2
 python-instagram==0.8.0
 python-openid==2.2.5
