--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ dj-database-url==0.2.1
 django-bootstrap-toolkit==2.12.0
 django-braces==1.0.0
 django-social-auth==0.7.23
+django-annoying
 flake8==2.0
 gunicorn==0.17.2
 httplib2==0.8
